# open-design-engine

./: Cargo.toml
crates/ode-cli/: Cargo.toml
crates/ode-cli/src/: commands.rs  knowledge.rs  main.rs  mutate.rs  output.rs  validate.rs
crates/ode-cli/tests/: add_test.rs  delete_test.rs  fonts_test.rs  integration.rs  move_test.rs  set_test.rs  workflow_test.rs
crates/ode-core/: Cargo.toml
crates/ode-core/src/: blend.rs  convert.rs  effects.rs  error.rs  layout.rs  lib.rs  paint.rs  path.rs  render.rs  scene.rs
crates/ode-export/: Cargo.toml
crates/ode-export/src/: error.rs  lib.rs  pdf.rs  png.rs  svg.rs
crates/ode-export/tests/: integration.rs
crates/ode-format/: Cargo.toml
crates/ode-format/src/: asset.rs  color.rs  container.rs  document.rs  lib.rs  meta.rs  node.rs  shapes.rs  style.rs  tokens.rs  typography.rs  wire.rs
crates/ode-format/tests/: integration.rs
crates/ode-import/: Cargo.toml
crates/ode-import/src/: error.rs  lib.rs
crates/ode-import/src/figma/: client.rs  convert.rs  convert_layout.rs  convert_style.rs  convert_text.rs  convert_tokens.rs  mod.rs  svg_path.rs  types.rs
crates/ode-import/tests/: integration_test.rs  round_trip.rs
crates/ode-import/tests/fixtures/: grid_layout.json  mask_basic.json  simple_frame.json  unsupported_nodes.json
crates/ode-mcp/: Cargo.toml
crates/ode-mcp/src/: lib.rs
crates/ode-review/: Cargo.toml
crates/ode-review/src/: checker.rs  context.rs  lib.rs  result.rs  rule.rs  traverse.rs
crates/ode-review/src/checkers/: contrast_ratio.rs  min_value.rs  mod.rs  spacing_scale.rs
crates/ode-text/: Cargo.toml
crates/ode-text/src/: font_db.rs  glyph.rs  layout.rs  lib.rs  shaper.rs
crates/ode-text/tests/: integration.rs
design-knowledge/: index.json
design-knowledge/guides/: accessibility.md  agent-image-workflow.md  spatial-composition.md
design-knowledge/rules/accessibility/: contrast-ratio.json  font-size-minimum.json  touch-target-size.json
design-knowledge/rules/spatial-composition/: alignment-consistency.json  density-range.json  minimum-spacing.json
docs/superpowers/plans/: 2026-03-12-ode-format-data-model.md  2026-03-12-rendering-pipeline.md  2026-03-13-agent-native-cli.md  2026-03-14-figma-import.md  2026-03-16-constraints-system.md  2026-03-17-design-knowledge-engine.md  2026-03-18-cli-document-mutation.md  2026-03-18-grid-layout.md  2026-03-18-mask-system.md  2026-03-19-ode-file-format.md  2026-03-21-agent-image-workflow.md  2026-03-21-ode-cli-improvements.md
docs/superpowers/specs/: 2026-03-12-ode-core-architecture-design.md  2026-03-12-rendering-pipeline-design.md  2026-03-13-agent-native-cli-design.md  2026-03-14-figma-import-design.md  2026-03-16-constraints-system-design.md  2026-03-17-cli-document-mutation-design.md  2026-03-17-design-knowledge-engine-design.md  2026-03-19-ode-file-format-design.md  2026-03-20-ode-cli-improvements-design.md  2026-03-21-agent-image-workflow-design.md
