[workspace]
resolver = "2"
members = [
    "crates/ode-format",
    "crates/ode-text",
    "crates/ode-core",
    "crates/ode-export",
    "crates/ode-import",
    "crates/ode-cli",
    "crates/ode-review",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Open Design Engine — You don't have to know design."
repository = "https://github.com/user/open-design-engine"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Path/curve math
kurbo = "0.11"

# CPU rendering
tiny-skia = "0.11"

# Tessellation
lyon = "1"

# Layout engine
taffy = "0.7"

# Image I/O
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# PDF generation — pinned to v0.5.0 (d62aabf); crates.io v0.6.0 has LazyCell bug on rustc <1.89
krilla = { git = "https://github.com/LaurenzV/krilla.git", rev = "d62aabf" }

# Color management
lcms2 = "6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# ID generation
nanoid = "0.4"

# Arena-based storage
slotmap = { version = "1", features = ["serde"] }

# Boolean path operations
i_overlay = "1"

# Base64 encoding (for SVG gradient fallback)
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Text rendering
skrifa = "0.22"
rustybuzz = "0.18"
unicode-linebreak = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# JSON Schema generation
schemars = { version = "0.8" }
