[package]
name = "ode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ODE command-line tool"

[[bin]]
name = "ode"
path = "src/main.rs"

[dependencies]
ode-format = { path = "../ode-format" }
ode-text = { path = "../ode-text" }
ode-core = { path = "../ode-core" }
ode-export = { path = "../ode-export" }
ode-import = { path = "../ode-import" }
ode-review = { path = "../ode-review" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
