[package]
name = "ode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ODE MCP server — AI agent interface for design creation"

[dependencies]
ode-format = { path = "../ode-format" }
ode-core = { path = "../ode-core" }
ode-export = { path = "../ode-export" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
